src/lib/ra_parser/src/block_tree/snapshots/ra_parser__block_tree__tests__syntax_contents_ra.snap
---
source: src/lib/ra_parser/src/block_tree/tests.rs
expression: tree
---
[
  [
    "Root",
    [
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "ContentBlock": "one line"
                },
                "position": [
                  [
                    1,
                    1
                  ],
                  [
                    1,
                    11
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "ContentBlock": "multiple \nlines"
                },
                "position": [
                  [
                    2,
                    1
                  ],
                  [
                    5,
                    2
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "ContentBlock": "multiple\nlines\n    keeping\n        indents"
                },
                "position": [
                  [
                    6,
                    1
                  ],
                  [
                    11,
                    2
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "ContentBlock": "with some characters\n!@#$%^&*()_+"
                },
                "position": [
                  [
                    12,
                    1
                  ],
                  [
                    15,
                    2
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ],
      [
        "Block",
        [
          [
            {
              "Token": {
                "kind": {
                  "ContentBlock": "with templates {{var}}"
                },
                "position": [
                  [
                    16,
                    1
                  ],
                  [
                    18,
                    2
                  ]
                ],
                "level": 1
              }
            }
          ]
        ]
      ]
    ]
  ]
]
